force-app/main/default/objects/OpportunityTeamMember/fields/Deal_Credit__c.field-meta.xml
<CustomField>
    <fullName>Deal_Credit__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Deal Credit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>