force-app/main/default/objects/OpportunityTeamMember/fields/Deposits_Credit__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Credit__c</fullName>
    <label>Deposits Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>