force-app/main/default/objects/OpportunityTeamMember/fields/Fee_Income_Credit__c.field-meta.xml
<CustomField>
    <fullName>Fee_Income_Credit__c</fullName>
    <label>Fee Income Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>