force-app/main/default/objects/OpportunityTeamMember/fields/Spend_Credit__c.field-meta.xml
<CustomField>
    <fullName>Spend_Credit__c</fullName>
    <label>Spend Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>